--- a/sdv/lightning/index.html
+++ b/sdv/lightning/index.html
@@ -14,10 +14,11 @@
     <span>For practical purposes, treat this as the time by which all lightning rods have been emptied.</span><br>
     <span>Number of Lightning Rods </span><input id="rods" type="number" value="20"><br>
     <span>Years to Simulate </span><input id="years" type="number" value="10000"><br>
-    <span>Every 10,000 years takes approx. 1-10 seconds to simulate, depending on the number of rods.</span>
-    <br><br><br>
-    <button id="start" onclick="simulate()">Simulate</button>
-    <br><br><br>
+    <span>Every 10,000 years takes approx. 1-10 seconds to simulate, depending on the number of rods.</span><br>
+    <input id="specialCharm" type="checkbox"><span>Player has Special Charm</span><br>
+    <br><br>
+    <button id="start" onclick="simulate()">Simulate</button><br>
+    <br><br>
     <span>Results</span><br>
     <span>Total Number of Strikes: </span><span id="totalStrikes"></span><br>
     <span>Expected Battery Packs per Year: </span><span id="batteriesPerYear"></span><br>
