The number of threads is now displayed

--- a/DreamAnalysis/index.html
+++ b/DreamAnalysis/index.html
@@ -15,6 +15,7 @@
     </style>
 </head>
 <body>
+    <span>Running with </span><span id="threads"></span><span> threads</span><br><br>
     <span>Total Number of Trials ............. </span><span id="totalTrials"></span><br>
     <span>Running Average Pearls per Trial ... </span><span id="meanPearls"></span><br>
     <span>Highest Pearls in a Single Trial ... </span><span id="maxPearls"></span><br>
