--- a/DreamAnalysis/index.html
+++ b/DreamAnalysis/index.html
@@ -8,6 +8,7 @@
         body {
             margin: auto;
             padding-top: 2rem;
+            padding-bottom: 2rem;
             width: 50%;
             font-size: 1.25rem;
             font-family: 'Inconsolata', 'Consolas', 'Roboto Mono', 'Courier New', Courier, monospace;
