--- a/sdv/processingtime/index.html
+++ b/sdv/processingtime/index.html
@@ -24,6 +24,10 @@
         <div id="mainDisplay" class="display">
             <span>No save file selected</span>
         </div>
+        
+        <span>Source on <a href="https://github.com/RandomComputerUser/RandomComputerUser.github.io/tree/main/sdv/processingtime">GitHub</a></span>
+        <br>
+        <span>Found any bugs? <a href="https://github.com/RandomComputerUser/RandomComputerUser.github.io/issues/new">Open</a> a new issue</span>
 
     </div>
 
