--- a/sdv/processingtime/index.html
+++ b/sdv/processingtime/index.html
@@ -12,7 +12,7 @@
     <div id="main">
         <script type="text/javascript" src="main.js"></script>
 
-        <h1>Stardew Valley Processing/h1>
+        <h1>Stardew Valley Processing</h1>
 
         <h6>Save File</h6>
         <div id="fileInput">
