--- a/sdv/lightning/index.html
+++ b/sdv/lightning/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stardew Valley Lightning Simulator</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <script src="main.js"></script>
