--- a/sdv/lightning/index.html
+++ b/sdv/lightning/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stardew Valley Lightning Simulator</title>
+    <title>SDV Lightning Simulator</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <script src="main.js"></script>
+    <h1>Stardew Valley Lightning Simulator</h1>
     <span>Sleep Time </span><input id="sleepTime" type="number" value="2400"><br>
     <span>This is the time displayed when you go to bed and sleep.</span><br>
     <span>Collect Time </span><input id="collectTime" type="number" value="700"><br>
