--- a/sdv/processingtime/index.html
+++ b/sdv/processingtime/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SDV Processing</title>
+    <title>SDV Processing Time</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div id="main">
         <script type="text/javascript" src="main.js"></script>
 
-        <h1>Stardew Valley Processing</h1>
+        <h1>Stardew Valley Processing Time</h1>
 
         <h6>Save File</h6>
         <div id="fileInput">
