Added Factorio Belt Printer

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             <li><a href="./sdv/processingtime/index.html">Save Viewer: Processing Time</a></span></li>
             <li><a href="./sdv/lightning/index.html">Lightning Simulator</a></span></li>
         </ul>
+        <br>
+        <h2>Factorio</h2>
+        <ul id="factorio">
+            <li><a href="./factorio/belt-printer/index.html">Belt Printer Blueprint Generator</a></span></li>
+        </ul>
 
     </div>
 </body>
