Added Reddit link to Factorio Belt Printer

--- a/factorio/belt-printer/index.html
+++ b/factorio/belt-printer/index.html
@@ -30,6 +30,7 @@
             <li>If the height of the image is odd, an extra row of pixels will be added to the bottom.</li>
             <li>Please note that a belt has two lanes, with each lane being able to hold four items. This means that you should stretch your image to be twice as wide for it to appear normal ingame.</li>
             <li>Grayscale and color images can be used, but the quality will be lower.</li>
+            <li>See the <a href="https://www.reddit.com/r/factorio/comments/qyozow/my_mostly_working_belt_printer/">Reddit post</a> for a demonstration.</li>
             </ul>
             <br>
             <p>Sample Image</p>
