--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
         <h2>Factorio</h2>
         <ul id="factorio">
             <li><a href="./factorio/belt-printer/index.html">Belt Printer Blueprint Generator</a></span></li>
-            <li><a href="./factorio/clock/index.html">Clock Blueprint Generator</a></span></li>
         </ul>
         <br>
         <h2>Stellaris</h2>
         <ul id="stellaris">
-            <li><a href="./stellaris/stellaris-map-generator/index.html">Belt Printer Blueprint Generator</a></span></li>
+            <li><a href="./stellaris/stellaris-map-generator/index.html">Galaxy Map Generator</a></span></li>
         </ul>
 
     </div>
