Added an option to make borders smoother

--- a/stellaris/stellaris-map-generator/index.html
+++ b/stellaris/stellaris-map-generator/index.html
@@ -46,6 +46,11 @@
 
     <br>
 
+    <input type="checkbox" id="smoothBorders" name="smoothBorders">
+    <label for="smoothBorders">Rounder borders (good increase in quality, takes longer to generate)</label>
+
+    <br>
+
     <input type="range" min="100" max="300" value="165" class="slider" id="paintScale" name="paintScale" oninput="updatePaintScaleNumberDisplay()">
     <span id="paintScaleNumberDisplay" class="big"></span>
     <script>
