Fixed potential bug

--- a/stellaris/stellaris-map-generator/index.html
+++ b/stellaris/stellaris-map-generator/index.html
@@ -73,7 +73,7 @@
     </div>
 
     <fieldset>
-        <legend class="bold">Color Variants (all options reduce saturation below that of in-game colors)</legend>
+        <legend class="bold">Color Variants (all options reduce saturation)</legend>
         <input type="radio" name="colorVariant" id="mapColorVariant" checked>
         <label for="mapColorVariant">Map Shades</label>
         <input type="radio" name="colorVariant" id="flagColorVariant">
